# IOTSHELTER_FINAL

./: README.md
INDOOR_NODE/: CMakeLists.txt
INDOOR_NODE/components/esp-idf-lib/components/i2c_lcd_pcf8574/: .component_hash  CMakeLists.txt  README.md  i2c_lcd_pcf8574.c  i2c_lcd_pcf8574.h  idf_component.yml
INDOOR_NODE/main/: CMakeLists.txt  app_driver.c  app_main.c  app_priv.h
OUTDOOR_NODE/: CMakeLists.txt  README.md  sdkconfig.defaults
OUTDOOR_NODE/OUTDOOR_SENSORS_FINAL/: CMakeLists.txt  sdkconfig.old
OUTDOOR_NODE/components/mq135/: CMakeLists.txt
OUTDOOR_NODE/main/: CMakeLists.txt  driver.cpp  driver.h  main.cpp
